test/Fail/Issue4927-4.agda
record R : Set₁ where
  field
    @flat A : Set
