test/Fail/Issue4927-4.err
Issue4927-4.agda:3.5-10: error: [AttributeKindNotEnabled]
Cohesion attributes have not been enabled (use --cohesion to enable
them): flat
